name:          cimple
version:       0.0.31
synopsis:      Simple C-like programming language
homepage:      https://toktok.github.io/
license:       GPL-3
license-file:  LICENSE
author:        Iphigenia Df <iphydf@gmail.com>
maintainer:    Iphigenia Df <iphydf@gmail.com>
copyright:     Copyright (c) 2016-2024, Iphigenia Df
category:      Data
stability:     Experimental
cabal-version: >=1.10
build-type:    Simple
description:
  Parser and AST for Cimple, a simple C-like programming language.

source-repository head
  type:     git
  location: https://github.com/TokTok/hs-cimple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-tools:      alex >=0, happy >=0
  exposed-modules:
    Language.Cimple
    Language.Cimple.Diagnostics
    Language.Cimple.IO
    Language.Cimple.MapAst
    Language.Cimple.Pretty
    Language.Cimple.Program
    Language.Cimple.TraverseAst
    Language.Cimple.TranslationUnit

  other-modules:
    Language.Cimple.Annot
    Language.Cimple.Ast
    Language.Cimple.CommentParser
    Language.Cimple.DescribeAst
    Language.Cimple.Flatten
    Language.Cimple.Graph
    Language.Cimple.Lexer
    Language.Cimple.ParseResult
    Language.Cimple.Parser
    Language.Cimple.Parser.Error
    Language.Cimple.Parser.Error.Pretty
    Language.Cimple.PrettyColor
    Language.Cimple.PrettyComment
    Language.Cimple.PrettyCommon
    Language.Cimple.SemCheck.Includes
    Language.Cimple.Tokens
    Language.Cimple.TreeParser

  build-depends:
      QuickCheck
    , aeson
    , array
    , base                 <5
    , bytestring
    , containers
    , data-fix
    , file-embed
    , filepath
    , hashable
    , monad-parallel
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , split
    , text
    , transformers-compat

executable cimplefmt
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          cimplefmt.hs
  build-depends:
      base        <5
    , bytestring
    , cimple
    , optparse-applicative
    , text

executable dump-ast
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          dump-ast.hs
  build-depends:
      base        <5
    , cimple
    , groom

executable dump-tokens
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          dump-tokens.hs
  build-depends:
      base        <5
    , bytestring
    , cimple
    , groom

executable include-graph
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          include-graph.hs
  build-depends:
      base    <5
    , cimple
    , groom

test-suite testsuite
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            testsuite.hs
  other-modules:
    Language.Cimple.AstSpec
    Language.Cimple.CommentParserSpec
    Language.Cimple.ParserSpec
    Language.Cimple.PrettyCommentSpec
    Language.Cimple.PrettySpec
    Language.Cimple.DiagnosticsSpec
    Language.CimpleSpec

  ghc-options:        -Wall -Wno-unused-imports
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      QuickCheck
    , base                 <5
    , cimple
    , containers
    , data-fix
    , extra
    , hspec
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , transformers-compat
