load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "cimplefmt",
    srcs = ["cimplefmt.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("text"),
    ],
)

haskell_binary(
    name = "dump-ast",
    srcs = ["dump-ast.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
    ],
)

haskell_binary(
    name = "count-tokens",
    srcs = ["count-tokens.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("text"),
        hazel_library("time"),
    ],
)

haskell_binary(
    name = "dump-tokens",
    srcs = ["dump-tokens.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
    ],
)

haskell_binary(
    name = "include-graph",
    srcs = ["include-graph.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("groom"),
    ],
)
