load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "cimplefmt",
    srcs = ["cimplefmt.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:text",
    ],
)

haskell_binary(
    name = "dump-ast",
    srcs = ["dump-ast.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
    ],
)

haskell_binary(
    name = "count-tokens",
    srcs = ["count-tokens.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:text",
        "//third_party/haskell:time",
    ],
)

haskell_binary(
    name = "dump-tokens",
    srcs = ["dump-tokens.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
    ],
)

haskell_binary(
    name = "include-graph",
    srcs = ["include-graph.hs"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:groom",
    ],
)
